--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">FoodNearby</string>
     <string name="title_activity_maps">Food Nearby</string>
+    <string name="nearby_food_n_bevarages"><![CDATA[Nearby Food & Beverages]]></string>
 </resources>
